Server: Integrate lobby discovery, room management, and lifecycle